--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-pdf": "^4.1.0",
     "react-read-pdf": "^2.0.9",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
