--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@phuocng/react-pdf-viewer": "^1.4.0",
-    "@react-pdf/renderer": "^1.6.8",
+    "@react-pdf/renderer": "^1.6.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
-    "pdf-viewer-reactjs": "^2.0.2",
+    "pdf-viewer-reactjs": "^2.0.7",
     "precise-ui": "^1.1.4",
     "primeicons": "^2.0.0",
     "primereact": "^4.1.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-pdf": "^4.1.0",
     "react-read-pdf": "^2.0.9",
